--- a/dialog1.tmpl.html
+++ b/dialog1.tmpl.html
@@ -24,6 +24,16 @@
         </p>
       </div> -->
 
+  <div sigdir class="m-signature-pad">
+    <div class="m-signature-pad--body" style="border: 1px solid black;">
+      <canvas></canvas>
+    </div>
+    <div class="m-signature-pad--footer">
+      <div class="description">Sign above</div>
+      <button type="button" class="button clear" data-action="clear">Clear</button>
+      <button type="button" class="button save" data-action="save">Save</button>
+    </div>
+  </div>
       
     </md-dialog-content>
     <md-dialog-actions layout="row">
